commit by dlupu

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -2,7 +2,8 @@
 
 $body-margin: 60px;
 $bleu-gris: #1e2f44;
-$orange: #ea6d2e;
+//$orange: #ea6d2e;
+$orange: #258ECD;
 $lightgrey: #3f3f3f;
 
 body {
