--- a/app/views/jeux/hots.html.erb
+++ b/app/views/jeux/hots.html.erb
@@ -3,9 +3,9 @@
      <div class="col-md-12">
 	<div class="panel panel-default banniere-game">
 	  <div class="panel-body">
-	    <%= image_tag t("lol.banniere"), class: "img-responsive" %>
+	    <%= image_tag t("hots.banniere"), class: "img-responsive" %>
 	    <!--div class="game-title text-center col-md-12">
-	      <h1 class="bold"><%= t("lol.name") %></h1>
+	      <h1 class="bold"><%= t("hots.name") %></h1>
 	    </div-->
 	  </div>
 	</div>
@@ -23,12 +23,12 @@
 
           <!-- informations -->
           <div class="panel panel-iframe">
-	      <iframe width="100%" height="380" src="https://widget.toornament.com/tournaments/569119f9140ba0da2e8b45c7/" frameborder="0" scrolling="no" allowfullscreen="true"></iframe> 
+	      <iframe width="100%" height="380" src="https://widget.toornament.com/tournaments/56911ad7140ba0da2e8b45cd/" frameborder="0" scrolling="no" allowfullscreen="true"></iframe> 
           </div>
 
           <!-- participants
           <div class="panel panel-iframe">
-	    <iframe width="100%" height="380" src="https://widget.toornament.com/tournaments/569119f9140ba0da2e8b45c7/participants?_locale=en_GB&theme=discipline" frameborder="0" scrolling="no" allowfullscreen="true"></iframe>
+	    <iframe width="100%" height="380" src="https://widget.toornament.com/tournaments/56911ad7140ba0da2e8b45cd/participants?_locale=en_GB&theme=discipline" frameborder="0" scrolling="no" allowfullscreen="true"></iframe>
           </div>  -->
 
           <!--div class="panel transparent">
@@ -52,7 +52,7 @@
 	      <h4>REGLES</h4>
 	    </div>
 	    <div class="panel-body">
-	      <h4>Tournois 48 slots sur inscription</h4>
+	      <h4>Tournois 24 slots sur inscription</h4>
 	      <h4 class="orange">Déroulement online : </h4>
 	      <ul>
 		<li>Phase de poule en BO1</li>
@@ -92,7 +92,7 @@
 <!--<div class="row"> bracket 
 	<div class="col-md-12">
           <div class="panel panel-iframe">
-	    <iframe width="100%" height="380" src="https://widget.toornament.com/tournaments/569119f9140ba0da2e8b45c7/stages/1?_locale=en_GB&theme=discipline" frameborder="0" scrolling="no" allowfullscreen="true"></iframe> 
+	    <iframe width="100%" height="380" src="https://widget.toornament.com/tournaments/56911ad7140ba0da2e8b45cd/stages/1?_locale=en_GB&theme=discipline" frameborder="0" scrolling="no" allowfullscreen="true"></iframe> 
           </div>
 	</div>-->
 
