--- a/app/views/jeux/hs.html.erb
+++ b/app/views/jeux/hs.html.erb
@@ -12,10 +12,10 @@
       </div>
 </div>
 
-<!-- billeterie -->
+<!-- billeterie
 <div class="panel panel-iframe">
   <iframe class="embed-responsive-item" width="300" height="88" src="//www.toornament.com/widget/tournaments/54d62266150ba0d33b8b4680/registration?_locale=fr_FR" frameborder="0" allowfullscreen></iframe>
-</div>
+</div> -->
 
 <div class="row">
 
@@ -23,13 +23,13 @@
 
           <!-- informations -->
           <div class="panel panel-iframe">
-	      <iframe class="embed-responsive-item" width="100%" height="380" src="//www.toornament.com/widget/tournaments/54d62266150ba0d33b8b4680/information?_locale=en_GB" frameborder="0" allowfullscreen></iframe> 
+	      <iframe width="100%" height="380" src="https://widget.toornament.com/tournaments/56911a4e140ba0152f8b4567/" frameborder="0" scrolling="no" allowfullscreen="true"></iframe> 
           </div>
 
-          <!-- participants -->
+          <!-- participants
           <div class="panel panel-iframe">
-	    <iframe class="embed-responsive-item" width="100%" height="380" src="//www.toornament.com/widget/tournaments/54d62266150ba0d33b8b4680/participants?_locale=en_GB" frameborder="0" allowfullscreen></iframe>
-          </div> 
+	    <iframe width="100%" height="380" src="https://widget.toornament.com/tournaments/56911a4e140ba0152f8b4567/participants?_locale=en_GB&theme=discipline" frameborder="0" scrolling="no" allowfullscreen="true"></iframe>
+          </div>  -->
 
 	</div>
 
@@ -41,14 +41,17 @@
 	    <h4>REGLES</h4>
 	  </div>
 	  <div class="panel-body">
-	    <h4>Tournois 16 slots sur inscriptions (uniquement le dimanche)</h4>
-	    <h4  class="orange">Déroulement  sur place : </h4>
+	    <h4>Tournois 64 slots sur inscription</h4>
+	    <h4  class="orange">Déroulement online : </h4>
 	    <ul>
-	      <li>Déroulement du tournoi en double élimination à partir des quarts de finales en BO3</li>
-	      <li>Finale en BO5</li>
+	    	<li>Phase de poule en BO1</li>
+	      	<li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
 	    </ul>
 
-	    Pour plus de précisions, merci de vous référencer aux document des Masters Français du Jeu Vidéo disponibles <%= link_to "ici", "http://www.mastersjeuvideo.org/files/rules/Annexe_HS_2014-2015.pdf", target: :blank %>
+	   <h4 class="orange">Déroulement de la finale offline : </h4>
+	    La finale se déroulera en BO5.<br />
+	    Elle aura lieu lors d'Evry Games City, les 16 et 17 Avril 2016, aux Arènes de l'Agora, 91000 Evry.<br />
+	    Tous les résultats de vos matchs devront être envoyés à <a href="mailto:contact@theesportacademy.com">The eSport Academy</a>, screen à l'appui.
 
 	  </div>
 	</div>
@@ -60,27 +63,12 @@
 	      <h4 class="recompenses">RECOMPENSES</h4>
 	    </div>
 	    <div class="panel-body">
-<span class="orange">1er</span> : Clavier, Casque, Souris, Paire d'écouteurs, Tapis de souris<br />
-<span class="orange">2ème</span> : Casque, Souris, Paire d'écouteurs, Tapis de souris<br />
- <span class="orange">3ème</span> : Souris, Paire d'écouteurs, Tapis de souris<br />
+			Coming soon.
 	    </div>
 	  </div>
 
 
-	  <div class="panel transparent">
-	    <div class="panel-heading text-center">
-	      <h4 class="materiel">MATERIEL</h4>
-	    </div>
-	    <div class="panel-body">
-	      <h4 class="orange">Les joueurs doivent amener :</h4>
-	      <div class="tabule">- Leur ordinateur personnel (fixe ou portable)</div>
-	      <div class="tabule">- Leurs périphériques (clavier, souris, casque)</div>
-	      <div class="tabule">- Un câble RJ45 (câblage droit) de 10m minimum</div>
-
-	      <br />
-	      <p>Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement.</p>
-	    </div>
-	  </div>
+	 
 
 
 	</div>
@@ -89,12 +77,12 @@
 </div>
 
 
-<div class="row"><!-- bracket -->
+<!--<div class="row">
 	<div class="col-md-12">
           <div class="panel panel-iframe">
-	    <iframe class="embed-responsive-item" width="100%" height="1250" src="//www.toornament.com/widget/tournaments/54d62266150ba0d33b8b4680/stages/1?_locale=en_GB" frameborder="0" allowfullscreen></iframe> 
+	    <iframe width="100%" height="380" src="https://widget.toornament.com/tournaments/56911a4e140ba0152f8b4567/stages/1?_locale=en_GB&theme=discipline" frameborder="0" scrolling="no" allowfullscreen="true"></iframe> 
           </div>
-	</div>
+	</div>-->
 
 </div>
 
