--- a/app/views/static_pages/home/_billeterie.html.erb
+++ b/app/views/static_pages/home/_billeterie.html.erb
@@ -1,5 +1,5 @@
 
-<div class="">
+<!--<div class="">
 	<div class="billeterie-panel">
 	  <% lien_reservation = 'http://www.moxity.com/events/evry-games-city-25-et-26-avril-2015/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&' %>
 	  <%= link_to "BILLETTERIE SPECTATEURS", lien_reservation, target: "_blank", class:"btn btn-default btn-block default-billeterie bold", style: "font-size: 18px;" %>
@@ -10,4 +10,4 @@
 	  <% lien_invitation = 'http://www.moxity.com/events/evry-games-city-25-et-26-avril-2015-invitation/ticketing/select?colors[]=ffffff&colors[]=eeeeee&colors[]=666666&colors[]=B70D1A&colors[]=ffffff&colors[]=B70D1A&colors[]=FF0013&' %>
 	  <%= link_to "MON CODE INVITATION", lien_invitation, target: "_blank", class:"btn btn-default btn-block bold", style: "font-size: 18px;" %>
 	</div>
-</div>
+</div>-->
