--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -35,16 +35,12 @@
       </div>
       <div class="panel-body">
         <p>
-          <h4 class="orange">Samedi 25 Avril</h4>
-         Ouverture de 10h00 à 17h30 <br />
+          <h4 class="orange">Samedi 16 Avril</h4>
+         Ouverture de 10h00 à 22h00 <br />
        </p>
        <p>
-          <h4 class="orange">Soirée Évènement</h4>
-          Le samedi soir, de 20h00 à 22h40 (interdit au moins de 16 ans)<br />
-          En raison du plan Vigipirate, la salle sera fermée dans la nuit du samedi au dimanche
-       </p><p>
-          <h4 class="orange">Dimanche 26 Avril</h4>
-          Ouverture de 10h00 à 19h30<br /> 
+          <h4 class="orange">Dimanche 17 Avril</h4>
+          Ouverture de 10h00 à 19h00<br /> 
        </p>
       </div>
     </div>
@@ -79,23 +75,8 @@
 
 	<p>À 2 minutes à pied de la gare Évry-Courcouronnes Centre</p>
 
-	<p><span class="orange">Code promotion disponibles pour :</span>
-	<ul>
-	<li>Joueurs</li>
-	<li>Presse</li>
-	<li>Invités d'honneurs</li>
-	<li>Spectateurs (dans la limite des places disponibles)</li>
-	</ul></p>
-
-	<p>Tarifs préférentiels:<br />
-	<ul>
-	<li>61€/nuit Appartement studio pour 1 ou 2 personnes.</li>
-	<li>111€/nuit Suites 2 pièces pour 1 ou 4 personnes.</li>
-	</ul>
-	</p>
-
-	<p>Pour toute réservation au Residhome Paris-Evry, veuillez remplir le formulaire disponible à cette adresse : <%= link_to "goo.gl/forms/k3VqVF09f6", "http://goo.gl/forms/k3VqVF09f6", target: "_blank" %>.</p>
-      </div>
+	
+     </div>
     </div>
 
 
@@ -119,14 +100,11 @@
 
         <div class="orange">En prévente</div>
           <div class="tabule">
-          Tarif pack week end : 10€<br />
-          Tarif qualifications samedi : 7€<br />
-          Tarif finales dimanches : 8€
+          Coming soon.
           </div>
         <div class="orange">Sur place</div>
           <div class="tabule">
-          Tarif qualifications samedi : 8€<br />
-          Tarif finales dimanche : 10€
+          Coming soon.
           </div>
         </div>
 
@@ -144,24 +122,7 @@
     </div>
 
 
-    <div class="panel transparent"><!-- Services -->
-      <div class="panel-heading text-center">
-        <h4>SERVICES</h4>
-      </div>
-      <div class="panel-body">
-        <p>Des serveurs funs seront mis en place pour tous ceux qui souhaitent se détendre entre 2 parties ou tout simplement jouer avec les personnes présentes :</p>
-        <ul>
-          <li>TeeWorlds</li>
-          <li>CS Source</li>
-          <li>Trackmania</li>
-          <li>Team Fortress 2</li>
-        </ul>
-        <p>Des câbles et des PC seront disponibles à la location sur place, dans la limite des stocks disponibles.<br />
-           Un <%= link_to "Hôtel Ibis", "http://www.ibis.com/fr/hotel-1986-ibis-styles-evry-cathedrale/index.shtml"%> se situe à proximité.<br />
-           De nombreux restaurants du Centre Commercial Evry 2 situé à proximité seront accessibles.</p>
-        
-      </div>
-    </div>
+    
 
 
 
