--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -41,8 +41,10 @@
 
         <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :csgo} %>
         <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :lol} %>
-        <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :sc2} %>
+        <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :cod} %>
         <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :hs} %>
+        <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :hots} %>
+        <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :sfv} %>
 
       </div>
     </div><!-- col-md-8 left-mosaique -->
