--- a/app/views/static_pages/plan_du_site.html.erb
+++ b/app/views/static_pages/plan_du_site.html.erb
@@ -27,8 +27,10 @@
         <div class="tabule">
           <div><%= link_to t('csgo.name'), jeux_csgo_path %></div>
           <div><%= link_to t('lol.name'), jeux_lol_path %></div>
-          <div><%= link_to t('sc2.name'), jeux_sc2_path %></div>       
-          <div><%= link_to t('hs.name'), jeux_hs_path %></div>
+          <div><%= link_to t('hots.name'), jeux_hots_path %></div>       
+          <div><%= link_to t('hs.name'), jeux_hs_path %></div>    
+          <div><%= link_to t('cod.name'), jeux_cod_path %></div>    
+          <div><%= link_to t('sfv.name'), jeux_sfv_path %></div>
         </div>
 
 
