correction graphique et modif meta google - Fabien

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -30,11 +30,11 @@
     <div class="col-md-8" id="left-mosaique">
 
       <div class="row">
-        <div class="col-md-12 mosaique slideshow">
+        <!--<div class="col-md-12 mosaique slideshow">-->
           <!--Slideshow-->
           <%#= render partial: 'static_pages/home/carousel' %>
-            <%= render 'static_pages/home/billeterie' %>
-        </div>
+            <%#= render 'static_pages/home/billeterie' %>
+        <!--</div>-->
       </div>
 
       <div class="row">
