--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -85,12 +85,10 @@
 	      <h4 class="recompenses">RECOMPENSES</h4>
 	    </div>
 	    <div class="panel-body">
-	    	Coming soon.
-<!--<span class="orange">1er</span> : 2500€, 5 Claviers, 5 Casques, 5 Souris, 5 Paires d'écouteurs, 5 Tapis de souris<br />
-<span class="orange">2ème</span> : 1500€, 5 Casques, 5 Souris, 5 Paires d'écouteurs, 5 Tapis de souris<br />
-<span class="orange">3ème</span> : 1000€, 5 Souris, 5 Paires d'écouteurs, 5 Tapis de souris<br />-->
-
-
+			<ul>
+				<li>100% des inscriptions seront reversées dans le cashprize, réparti entre les deux finalistes</li>
+				<li>Les deux premiers de chaque groupe de poule remporteront des dotations de matériel de nos partenaires et sponsors</li>
+			</ul>
 	    </div>
 	  </div>
 
