--- a/app/views/jeux/sfv.html.erb
+++ b/app/views/jeux/sfv.html.erb
@@ -70,12 +70,12 @@
 	  <div class="panel transparent">
 	    <div class="panel-heading text-center">
 	      <h4 class="recompenses">RECOMPENSES</h4>
-	    Coming soon.
-
-
-
-             
-
+	    </div>
+	    <div class="panel-body">
+			<ul>
+				<li>100% des inscriptions seront reversées dans le cashprize, réparti entre les deux finalistes</li>
+				<li>Les deux premiers de chaque groupe de poule remporteront des dotations de matériel de nos partenaires et sponsors</li>
+			</ul>
 	    </div>
 	  </div>
 
