mise en place des cashprize

--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -69,8 +69,8 @@
 	    <h4>Tournois 24 slots sur inscription</h4>
 	    <h4 class="orange">Déroulement online : </h4>
 	    <ul>
-	      <li>Phase de poule en BO1</li>
-	      <li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
+	      <li>Phase de poule en BO3</li>
+	      	<li>Quarts de finales et demi-finales en BO3</li>
 	    </ul>
 	    <h4 class="orange">Déroulement de la finale offline : </h4>
 	    La finale se déroulera en BO5.<br />
@@ -91,6 +91,8 @@
 			</ul>
 	    </div>
 	  </div>
+	  
+	  
 
 
 	</div>
