--- a/app/views/jeux/hs.html.erb
+++ b/app/views/jeux/hs.html.erb
@@ -63,7 +63,10 @@
 	      <h4 class="recompenses">RECOMPENSES</h4>
 	    </div>
 	    <div class="panel-body">
-			Coming soon.
+			<ul>
+				<li>100% des inscriptions seront reversées dans le cashprize, réparti entre les deux finalistes</li>
+				<li>Les deux premiers de chaque groupe de poule remporteront des dotations de matériel de nos partenaires et sponsors</li>
+			</ul>
 	    </div>
 	  </div>
 
