--- a/app/views/jeux/cod.html.erb
+++ b/app/views/jeux/cod.html.erb
@@ -73,7 +73,8 @@
 	    </div>
 	    <div class="panel-body">
 			<ul>
-				<li>100% des inscriptions seront reversées dans le cashprize, réparti entre les deux finalistes</li>
+				<li>Cashprize minimum de 2000€, réparti entre les deux finalistes</li>
+				<li>100% des inscriptions seront reversées dans le cashprize</li>
 				<li>Les deux premiers de chaque groupe de poule remporteront des dotations de matériel de nos partenaires et sponsors</li>
 			</ul>
 	    </div>
