ajout RP pour récompense LoL

--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -75,6 +75,10 @@
 			<ul>
 				<li>Cashprize minimum de 1500€, réparti entre les deux finalistes</li>
 				<li>100% des inscriptions seront reversées dans le cashprize</li>
+				<li>1ere place : 9600 RP + Ryze triomphant / joueur</li>
+				<li>2eme place : 7200 RP / joueur</li>
+				<li>3eme place : 4800 RP / joueur</li>
+				<li>4eme place : 2400 RP / joueur</li>
 				<li>Les deux premiers de chaque groupe de poule remporteront des dotations de matériel de nos partenaires et sponsors</li>
 			</ul>
 	    </div>
