modif page presentation

--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -15,14 +15,7 @@
 
       <h3 class="bold orange" style="font-size: 18px;">EVRY GAMES CITY, C’EST QUOI ?</h3>
       <p style="">
-         A l’initiative de l’ENSIIE (Ecole Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise) et la Mairie de Evry Centre
-         Essonne (91), <span class="orange" style="">EVRY GAMES CITY</span> c’est le nouveau grand rendez-vous annuel « so gaming » de la
-         culture numérique et du jeu vidéo en France.
-      </p>
-      <p style="">
-        <span class="orange">EVRY GAMES CITY</span> ce n’est pas un salon , mais un événement d’un nouveau genre qui a pour
-        ambition de permettre à un large public de se rencontrer, de partager et de découvrir les dernières innovations du
-        secteur.
+         Porté par le succès de la première édition, <span class="orange">Evry Games City 2 revient les 16 et 17 Avril</span> prochain aux Arènes de l'Agora, pour deux jours de programmation exceptionnelle. Entre nouveautés des éditeurs, création des studios indépendants, innovations technologiques, tournois eSport, et masterclass dédiées à la découverte et au partage de connaissance, Evry Games City 2 a pour ambition de proposer la plus belle et la plus riche des expériences gaming en Ile de France.
       </p>
       </div>
 
@@ -34,16 +27,8 @@
           </div>
 
           <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown1">
-	      <p>Un espace dédié à 15 studios indépendants et Start Up «
-	made in France » pour vous faire découvrir et partager leur
-	nouveaux projets et dernières innovations.
-	Un espace participatif pour s’informer sur les formations
-	ou les filières métiers, rencontrer et échanger avec des
-	professionnels du secteur.</p>
-	      <p><span style="font-weight: bold;">Quelques noms en avant première :</span> He Saw, Cyanide,
-	Wild Factor, Lightbulbcrew, OSome, Aurora Studio, Crown
-	takers, Seaven Studio, Hide, Fireworkscommandship, Enter
-	the Rift…</p>
+	      <p>Pour cette deuxième édition, les organisateurs ont décidé de mettre à l'honneur la créativité et l'innovation made in France. Ce sont 40 des meilleurs studios indépendants français qui seront présents pour faire découvrir et partager leurs réalisations. Créé spécialement pour l'occasion, le prix "Indie Games City" récompensera les meilleurs projets (PC, console, smartphone) et permettra à l'un d'entre eux de représenter la "French Touch" lors du prochain salon E3 de Los Angeles. La mise en oeuvre de cette édition spéciale studios indépendants français a été confiée à l'équipe de <span class="orange">Budgames Interactive</span>.  </p>
+	      
          </div>
       </div>
       
@@ -57,21 +42,49 @@
           </div>
 
           <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown3">
-	      <p>En partenariat avec Xbox One, Sony Computer, Nintendo,
-	l’association Ouest Game et les médiathèques de
-        l’agglomération d’Essonne, un espace de jeu en libre accès avec
-	plus de 65 bornes de jeux et ateliers gaming et (ou)
-        tournois amateurs. Venez tester toutes les nouveautés des
-        éditeurs partenaires !</p>
-	      <p><span style="font-weight: bold">Quelques noms en avant première :</span> Nintendo, Playstation
-	4, Xbox One, Bandai Namco, Capcom, Konami, Warner
-	Bros Games…</p>
+	      <p>Un parcours visiteurs toujours plus riche pour permettre aux visiteurs de tester toutes les nouveautés des éditeurs. En partenariat avec Xbox One, Sony Playstation, Nintendo, Evry Games City 2 propose cette année plus de 70 bornes en libre service qui attendent les visiteurs de tous âges pour tester toutes les nouveautés des éditeurs partenaires.</p>
+	      
          </div>
       </div>
 
       </div>
 
+<div class="row">
+      <div class="col-md-6 col-xs-6 image-deroulante dropdown">
+          <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown1" aria-expanded="true">
+	      <%= image_tag "image_presentation_tiny_2.png", class:"img-responsive"%>
+	      <p><span class="orange bold" >PLAYING ZONE</span> (220 m<sup>2</sup>)</p>
+          </div>
 
+          <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown1">
+	      <p>Les tournois eSport reviennent plus nombreux pour la 2eme année consécutive à Evry. A cette occasion, les organisateurs mettent à disposition des joueurs le Théâtre de l'Agora, transformé pour l'occasion en eSport Arena avec une capacité de plus de 240 places assises. Organisé avec le soutien opérationnel de The eSport Academy et des Masters Français du Jeu Vidéo, l'événement permettra aux meilleurs gamers du moment de s'affronter lors de finales en live.  </p>
+	      
+         </div>
+      </div>
+      
+
+
+
+     <div class="col-md-6 col-xs-6 image-deroulante dropdown">
+          <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown3" aria-expanded="true">
+	      <%= image_tag "image_presentation_tiny_1.png", class:"img-responsive" %>
+	      <p><span class="orange bold">LEARNING ZONE</span> (250 m<sup>2</sup>)</p>
+          </div>
+
+          <div class="panel transparent texte-deroulant dropdown-menu" aria-labelledby="dropdown3">
+	      <p>2 jours de masterclass interactives et participatives entre le public et le meilleur de la création indépendante française. Tout savoir sur l'élaboration d'un jeu, que ce soit sur console, sur PC, ou sur mobile. A tour de rôle, studios, éditeurs, associations, et personnalités, viendront présenter sur scène leurs réalisations et business, exposer leurs inspirations et méthodes pour donner vie à leurs projets de jeu vidéo.</p>
+         </div>
+      </div>
+
+      </div>
+      
+      <div class="row">
+      <div class="col-md-12 col-xs-12">
+          <p><span class="orange bold">Une nouveauté en 2016</span> : L'opération "Une manette pour les quartiers"</p>
+          <p>Pendant 2 jours, des célébrités et personnalités du jeu vidéo vont défier online le grand public sur 2 jeux référents : FIFA 16 et Mario Kart 8. Tous les gains récoltés et les dotations apportées par les partenaires serviront à proposer des consoles de jeu en libre service aux associations de quartiers et à mettre en place pour les habitants d'Evry des modules de cours de perfectionnement aux jeux vidéo, encadrés par des champions reconnus.</p>
+      </div>
+      </div>
+          
   </div>
 
 
