Retrait des tournois annulés

--- a/app/views/jeux/sfv.html.erb
+++ b/app/views/jeux/sfv.html.erb
@@ -59,7 +59,7 @@
 		<li>Quarts de finales et demi-finales en BO3</li>
 	      </ul>
 	     <h4 class="orange">Déroulement de la finale offline : </h4>
-	    La finale se déroulera en BO5.<br />
+	    La finale se déroulera en BO5 sur PC.<br />
 	    Elle aura lieu lors d'Evry Games City, les 16 et 17 Avril 2016, aux Arènes de l'Agora, 91000 Evry.<br />
 	    Tous les résultats de vos matchs devront être envoyés à <a href="mailto:contact@theesportacademy.com">The eSport Academy</a>, screen à l'appui.
 
