changement du Comm Presse

--- a/app/views/static_pages/presse.html.erb
+++ b/app/views/static_pages/presse.html.erb
@@ -11,7 +11,7 @@
     <p>Pour les demandes d'accréditations presse, cliquez <%= link_to "ici", "https://docs.google.com/forms/d/1q6qYqGtsVqA34vjGVFRLBywXWaA5A6fc6vIhc2nmR8s/viewform?c=0&w=1", target: "blank" %></p>
 
     <div class="pdf_presse">
-      <a href="Communique de presse Evry Games City_v2.pdf" target="_blank">
+      <a href="CP_EGC2016.jpg" target="_blank">
         <%= image_tag "dossier_presse.jpg", alt: "Communiqué de presse", class:"img-responsive" %>
       </a>
     </div>
