--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -22,7 +22,7 @@
     <div class="row">
       <div class="col-md-6 col-xs-6 image-deroulante dropdown">
           <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown1" aria-expanded="true">
-	      <%= image_tag "image_presentation_tiny_1.png", class:"img-responsive"%>
+	      <%= image_tag "image_presentation_tiny_4.jpg", class:"img-responsive"%>
 	      <p><span class="orange bold" >DISCOVERY ZONE</span> (220 m<sup>2</sup>)</p>
           </div>
 
@@ -37,7 +37,7 @@
 
      <div class="col-md-6 col-xs-6 image-deroulante dropdown">
           <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown3" aria-expanded="true">
-	      <%= image_tag "image_presentation_tiny_3.png", class:"img-responsive" %>
+	      <%= image_tag "image_presentation_tiny_3.jpg", class:"img-responsive" %>
 	      <p><span class="orange bold">GAMING ZONE</span> (250 m<sup>2</sup>)</p>
           </div>
 
@@ -52,7 +52,7 @@
 <div class="row">
       <div class="col-md-6 col-xs-6 image-deroulante dropdown">
           <div class="image-titre dropdown-toggle" data-toggle="dropdown" id="dropdown1" aria-expanded="true">
-	      <%= image_tag "image_presentation_tiny_2.png", class:"img-responsive"%>
+	      <%= image_tag "image_presentation_tiny_2.jpg", class:"img-responsive"%>
 	      <p><span class="orange bold" >PLAYING ZONE</span> (220 m<sup>2</sup>)</p>
           </div>
 
