changement page STAFF LAN

--- a/app/views/static_pages/contact_egs.html.erb
+++ b/app/views/static_pages/contact_egs.html.erb
@@ -10,21 +10,6 @@
 </div>
 
 
-<div class="panel transparent">
-
-  <div class="panel-heading text-center">
-    <h4 class="contact-presentation-title"><%= t(:presentation) %></h4>
-  </div>
- 
-  <div class="panel-body">
-
-   <p>Le staff d’<span class="orange">Evry Games City</span> est majoritairement composé de membres de L’<span class="orange">ENSIIE Game Show</span>. Entièrement constituée de bénévoles passionnés de jeux vidéo, l'association a pour ambition d’organiser des LAN de qualités, ainsi que tous les types d’évènements impliquant les jeux vidéo.</p>
-   <p>Les membres du staff viennent de tous les horizons (professionnels ou étudiants) et s’impliquent en mettant à contribution leurs compétences et savoirs faire indispensables à la réussite de ces évènements.</p>
-   <p>Cette année, l'association organise une LAN de grande envergure, sur les 4 titres majeurs de la scène E-sport : LoL, CS : GO, SC et Hearthstone. Les meilleures équipes s'affronteront pour se répartir 10 000 euros de cash prize et s'imposer parmi les meilleurs joueurs français.</p>
-
-  </div>
-
-</div>
 
 
 <div class="panel transparent">
@@ -34,8 +19,7 @@
   </div>
  
   <div class="panel-body">
-    <p>Pour toute question sur la Lan Party, vous pouvez nous contacter sur : <%= link_to t("#{contacttag}.contact_at"), "mailto:" + t("#{contacttag}.contact_at") %><br />
-      Si vous voulez vous associer avec l'équipe qui gère l'évènement, vous pouvez nous contacter sur : <%= link_to t("#{contacttag}.partenaires_at"), "mailto:" + t("#{contacttag}.partenaires_at") %> </p>
+    <p>Pour toute question sur la Lan Party, vous pouvez nous contacter sur : <%= link_to t("#{contacttag}.contact_at"), "mailto:" + t("#{contacttag}.contact_at") %><br /></p>
   </div>
 
 </div>
