--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -46,6 +46,15 @@
   
 </p>
 
+    <div class="row">
+<%= image_tag "image_presentation_tiny_4.jpg", class:"img-responsive"%>
+<%= image_tag "image_presentation_tiny_3.jpg", class:"img-responsive"%>
+<%= image_tag "image_presentation_tiny_2.jpg", class:"img-responsive"%>
+<%= image_tag "image_presentation_tiny_1.png", class:"img-responsive"%>
+        
+
+      </div>
+
     </div><!-- col-md-8 left-mosaique -->
 
     <div class="col-md-4" id="right-mosaique">
