--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -36,7 +36,7 @@
             <%#= render 'static_pages/home/billeterie' %>
         <!--</div>-->
       </div>
-<p>
+<p style="">
   Evry Games City c’est le rendez-vous annuel « so gaming » de la culture numérique et du jeu vidéo en ile France.<br />
   Porté par le succès de la première édition, Evry Games City 2 revient les 16 et 17 Avril prochain aux Arènes de l’Agora, pour deux jours de programmation exceptionnelle.<br />
   Entre nouveautés des éditeurs, création des studios indépendants, innovations technologiques, tournois        
@@ -89,9 +89,9 @@
     <div class="col-md-12" style="border-top: 2px solid #eaeaea;"></div>
   </div>
 
-  <!-- <div class="row partenaires">
-    <%#= render "static_pages/partenaires/partenaire_carousel" %>
-  </div> -->
+  <div class="row partenaires">
+    <%= render "static_pages/partenaires/partenaire_carousel" %>
+  </div> 
   <!-- div class="row partenaires">
     <%#= render partial: 'static_pages/home/partenaires_carousel' %>
   </div-->
