--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -36,7 +36,7 @@
             <%#= render 'static_pages/home/billeterie' %>
         <!--</div>-->
       </div>
-<p style="">
+<p style="font-size:130%">
   Evry Games City c’est le rendez-vous annuel « so gaming » de la culture numérique et du jeu vidéo en ile France.<br />
   Porté par le succès de la première édition, Evry Games City 2 revient les 16 et 17 Avril prochain aux Arènes de l’Agora, pour deux jours de programmation exceptionnelle.<br />
   Entre nouveautés des éditeurs, création des studios indépendants, innovations technologiques, tournois        
@@ -89,9 +89,9 @@
     <div class="col-md-12" style="border-top: 2px solid #eaeaea;"></div>
   </div>
 
-  <div class="row partenaires">
-    <%= render "static_pages/partenaires/partenaire_carousel" %>
-  </div> 
+  <!--<div class="row partenaires">
+    <%#= render "static_pages/partenaires/partenaire_carousel" %>
+  </div> -->
   <!-- div class="row partenaires">
     <%#= render partial: 'static_pages/home/partenaires_carousel' %>
   </div-->
@@ -136,13 +136,13 @@
     </div>
 
 
-    <div class="col-md-5 hidden-xs middle-home-footer" style="color: black;">
+    <div class="panel transparent col-md-5 hidden-xs middle-home-footer" style="color: black;">
      <%= image_tag "Newsletter_bottom.png", class: "img-responsive center-block img-txt" %>     
      <%= render "static_pages/home/mail_retriever" %>
     </div>
 
 
-    <div class="col-md-3 right-home-footer">
+    <div class="panel transparent col-md-3 right-home-footer">
       <%= image_tag "LOGO_LONG_BLACK_EGC-mini.png", height: "80", class: "center-block img-responsive img-logo" %>
       <!--div class="text-center small">© EvryGamesCity</div-->
     </div>
