--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -36,12 +36,13 @@
             <%#= render 'static_pages/home/billeterie' %>
         <!--</div>-->
       </div>
-<p style="font-size:130%">
+<p style="font-size:120%">
   Evry Games City c’est le rendez-vous annuel « so gaming » de la culture numérique et du jeu vidéo en ile France.<br />
   Porté par le succès de la première édition, Evry Games City 2 revient les 16 et 17 Avril prochain aux Arènes de l’Agora, pour deux jours de programmation exceptionnelle.<br />
   Entre nouveautés des éditeurs, création des studios indépendants, innovations technologiques, tournois        
   e-sports, et masterclass dédiées à la découverte et au partage de connaissance, Evry Games City 2 a pour 
-  ambition de proposer la plus belle et la plus riche des expériences gaming en Ile de France.
+  ambition de proposer la plus belle et la plus riche des expériences gaming en Ile de France.<br />
+  Découvrez nos quatre univers, la <a class="navlink" href="/discovering">Discovering Zone</a>, la <a class="navlink" href="/playing">Playing Zone</a>, la <a class="navlink" href="/gaming">Gaming Zone</a>, ainsi que la <a class="navlink" href="/learning">Learning Zone</a>.
 </p>
 
 <div class="row">
@@ -136,13 +137,13 @@
     </div>
 
 
-    <div class="panel transparent col-md-5 hidden-xs middle-home-footer" style="color: black;">
+    <div class="col-md-5 hidden-xs middle-home-footer" style="color: black;">
      <%= image_tag "Newsletter_bottom.png", class: "img-responsive center-block img-txt" %>     
      <%= render "static_pages/home/mail_retriever" %>
     </div>
 
 
-    <div class="panel transparent col-md-3 right-home-footer">
+    <div class="col-md-3 right-home-footer">
       <%= image_tag "LOGO_LONG_BLACK_EGC-mini.png", height: "80", class: "center-block img-responsive img-logo" %>
       <!--div class="text-center small">© EvryGamesCity</div-->
     </div>
