--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -36,6 +36,9 @@
             <%#= render 'static_pages/home/billeterie' %>
         <!--</div>-->
       </div>
+      
+      <div class="panel transparent">
+        <h4>L'événement « so gaming » !</h4>
 <p style="font-size:120%">
   Evry Games City c’est le rendez-vous annuel « so gaming » de la culture numérique et du jeu vidéo en ile France.<br />
   Porté par le succès de la première édition, Evry Games City 2 revient les 16 et 17 Avril prochain aux Arènes de l’Agora, pour deux jours de programmation exceptionnelle.<br />
@@ -44,11 +47,7 @@
   ambition de proposer la plus belle et la plus riche des expériences gaming en Ile de France.<br />
   Découvrez nos quatre univers, la <a class="navlink" href="/discovering">Discovering Zone</a>, la <a class="navlink" href="/playing">Playing Zone</a>, la <a class="navlink" href="/gaming">Gaming Zone</a>, ainsi que la <a class="navlink" href="/learning">Learning Zone</a>.
 </p>
-
-<div class="row">
-  
-  
-      </div>
+</div>
 
     </div><!-- col-md-8 left-mosaique -->
 
