--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,8 +38,11 @@
       </div>
       
       <div class="panel transparent">
+        
+        <div class="panel-heading text-center">
         <h4>L'événement « so gaming » !</h4>
-<p style="font-size:120%">
+      </div>
+<p style="font-size:120%; padding:5px;">
   Evry Games City c’est le rendez-vous annuel « so gaming » de la culture numérique et du jeu vidéo en ile France.<br />
   Porté par le succès de la première édition, Evry Games City 2 revient les 16 et 17 Avril prochain aux Arènes de l’Agora, pour deux jours de programmation exceptionnelle.<br />
   Entre nouveautés des éditeurs, création des studios indépendants, innovations technologiques, tournois        
