--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,17 +37,20 @@
         <!--</div>-->
       </div>
       
-      <div class="panel transparent">
+      <div class="panel transparent" style="
+    margin-top: 10px">
         
         <div class="panel-heading text-center">
         <h4>L'événement « so gaming » !</h4>
       </div>
-<p style="font-size:120%; padding:5px;">
+<p style="font-size:120%; padding:10px;">
   Evry Games City c’est le rendez-vous annuel « so gaming » de la culture numérique et du jeu vidéo en ile France.<br />
   Porté par le succès de la première édition, Evry Games City 2 revient les 16 et 17 Avril prochain aux Arènes de l’Agora, pour deux jours de programmation exceptionnelle.<br />
+  <br />
   Entre nouveautés des éditeurs, création des studios indépendants, innovations technologiques, tournois        
   e-sports, et masterclass dédiées à la découverte et au partage de connaissance, Evry Games City 2 a pour 
   ambition de proposer la plus belle et la plus riche des expériences gaming en Ile de France.<br />
+  <br />
   Découvrez nos quatre univers, la <a class="navlink" href="/discovering">Discovering Zone</a>, la <a class="navlink" href="/playing">Playing Zone</a>, la <a class="navlink" href="/gaming">Gaming Zone</a>, ainsi que la <a class="navlink" href="/learning">Learning Zone</a>.
 </p>
 </div>
