ajout margin texte

--- a/app/views/static_pages/discovering.html.erb
+++ b/app/views/static_pages/discovering.html.erb
@@ -17,7 +17,7 @@
       
       <%= image_tag "EGC_2016_IMG_11.jpg", class:"img-responsive" %>
       
-      <p style="">
+      <p style="margin-top:10px">
         Pour cette 2ème édition, les organisateurs ont décidé de mettre à l’honneur la créativité et l’innovation 
         « made in France ». Ce sont 40 des meilleurs studios indépendants Français qui seront présents pour 
         faire découvrir et partager leurs réalisations.<br />
