--- a/app/views/static_pages/gaming.html.erb
+++ b/app/views/static_pages/gaming.html.erb
@@ -17,7 +17,7 @@
        
       <%= image_tag "Gaming.jpg", class:"img-responsive" %>
       
-      <p style="">
+      <p style="margin-top:10px">
         Un parcours visiteurs toujours plus riche pour permettre aux visiteurs de tester toutes les nouveautés 
         des éditeurs. En partenariat avec Xbox One, Sony Computer, Nintendo, Evry Games City 2ème édition 
         propose cette année plus de 70 bornes en libres services qui attendent les visiteurs de tous âges pour 
