--- a/app/views/static_pages/learning.html.erb
+++ b/app/views/static_pages/learning.html.erb
@@ -17,7 +17,7 @@
        
       <%= image_tag "NG.jpg", class:"img-responsive" %>
       
-      <p style="">
+      <p style="margin-top:10px">
         2 jours de Masterclass interactives et participatives entre le public et le meilleur de la création
         indépendante française.<br />
         Tout savoir sur l’élaboration d’un jeu, que se soit sur console, sur pc ou sur mobile. A tour de rôle, studios, 
