--- a/app/views/static_pages/playing.html.erb
+++ b/app/views/static_pages/playing.html.erb
@@ -17,7 +17,7 @@
       
       <%= image_tag "PLAYING.jpg", class:"img-responsive" %>
       
-      <p style="">
+      <p style="margin-top:10px">
         Les tournois e-sport reviennent plus nombreux pour la 2ème année consécutive à Evry.
         A cette occasion, les organisateurs mettent à disposition des joueurs le Théâtre de l’Agora, transformé 
         pour l’occasion en e-sport Arena avec une capacité de plus de 240 places assises.<br />
