ajout email budgames page discovering

--- a/app/views/static_pages/discovering.html.erb
+++ b/app/views/static_pages/discovering.html.erb
@@ -27,7 +27,9 @@
         Les lauréats seront élus par un jury international composé de personnalités du secteur (développeurs, 
         game designers, journalistes, annonceurs, éditeurs, etc…)<br />
         La mise en œuvre de cette édition spéciale studios indépendants français a été confiée à l’équipe de 
-        « BudGames Interactive ».
+        « BudGames Interactive ».<br />
+        <br />
+        Vous souhaitez venir présenter votre studio ainsi que vos créations ? Envoyez nous un email : <a href="mailto:contact@budgames.net">contact@budgames.net</a> !
       </p>
     </div>
 
